fix: overflow-wrap to anywhere

--- a/src/components/Application/styles/Sidebar/Chat.module.scss
+++ b/src/components/Application/styles/Sidebar/Chat.module.scss
@@ -5,18 +5,18 @@
   display: grid;
   grid-template-rows: 72px 1fr auto;
 
-  &>.navbar {
+  & > .navbar {
     width: 100%;
     border-bottom: 1px solid #333333;
 
-    &>.left {
+    & > .left {
       display: flex;
       height: 100%;
       align-items: center;
       gap: 10px;
       margin-left: 25px;
 
-      &>.divider {
+      & > .divider {
         width: 1px;
         height: 8px;
         background-color: #333333;
@@ -24,7 +24,7 @@
     }
   }
 
-  &>.area {
+  & > .area {
     max-height: 100%;
     width: 100%;
     min-width: 100%;
@@ -34,50 +34,50 @@
     overflow-x: hidden;
     align-items: center;
 
-    &>.messages {
+    & > .messages {
       width: calc(100% - 50px);
       display: flex;
       flex-direction: column;
       margin-bottom: 20px;
       gap: 23px;
 
-      &>.divider {
+      & > .divider {
         display: flex;
         gap: 10px;
         align-items: center;
 
-        &>div {
-          font-family: "Oswald";
+        & > div {
+          font-family: 'Oswald';
           font-style: normal;
           font-weight: 700;
           font-size: 12px;
           line-height: 18px;
-          color: #FF4646;
+          color: #ff4646;
         }
 
-        &>span {
+        & > span {
           width: 100%;
           height: 1px;
           background: #595959;
         }
       }
 
-      &>.message {
+      & > .message {
         display: flex;
         gap: 10px;
-
-        &>img {
+        & > img {
           width: 32px;
           height: 32px;
           border-radius: 100%;
         }
 
-        &>.wrapper {
+        & > .wrapper {
           display: flex;
           flex-direction: column;
           gap: 5px;
+          overflow-wrap: anywhere;
 
-          &>.username {
+          & > .username {
             font-family: Oswald;
             font-size: 14px;
             font-weight: 500;
@@ -86,7 +86,7 @@
             text-align: left;
           }
 
-          &>.content {
+          & > .content {
             font-family: Oswald;
             font-size: 12px;
             font-weight: 400;
@@ -101,17 +101,17 @@
       }
     }
 
-    &>.white_space {
+    & > .white_space {
       height: 100%;
     }
   }
 
-  &>.input {
+  & > .input {
     min-height: 100%;
     width: 100%;
     display: flex;
 
-    &>.buttons {
+    & > .buttons {
       width: 115px;
       height: 100%;
       background-color: #2c2c2c;
@@ -119,11 +119,11 @@
       justify-content: center;
       align-items: center;
 
-      &>.wrapper {
+      & > .wrapper {
         display: flex;
         gap: 20px;
 
-        &>div {
+        & > div {
           cursor: pointer;
           display: flex;
           align-items: center;
@@ -131,7 +131,7 @@
       }
     }
 
-    &>textarea {
+    & > textarea {
       &::placeholder {
         color: #595959;
       }
